<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <View
        android:id="@+id/ellipse"
        android:layout_width="397dp"
        android:layout_height="397dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="-175dp"
        android:layout_marginTop="-247dp"
        android:background="@drawable/icon_background" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="65dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/wel_back"
        android:textColor="@color/colorPrimary"
        android:textSize="26dp" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="44dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/get_started"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="9dp"
                android:layout_weight="1"
                android:background="@drawable/facebook_button_layout" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="9dp"
                android:layout_weight="1"
                android:background="@drawable/google_button_layout" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/twitter_button_layout" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="11dp"
            android:fontFamily="@font/poppins_regular"
            android:text="or"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/boxstyle"
            android:backgroundTint="@color/grey"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingVertical="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:textColor="@color/colorPrimary"
            android:textCursorDrawable="@null"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/boxstyle"
            android:backgroundTint="@color/grey"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/hint_pwd"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingVertical="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:textColor="@color/colorPrimary"
            android:textCursorDrawable="@null"
            android:textSize="16dp" />

        <Button
            android:id="@+id/custom_signin_button"
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="20dp"
            android:background="@drawable/email_button_layout"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/ny_register"
                android:textColor="@android:color/black"
                android:textSize="16dp" />


            <TextView
                android:id="@+id/signUp_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/signup"
                android:textColor="@color/dark_blue"
                android:textSize="16dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>